--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ django-allauth==0.52.0
 django-environ==0.9.0
 django-extensions==3.2.1
 django_debug_toolbar==3.8.1
+djangorestframework==3.14.0
+
+python-dotenv==0.21.0
 
 flake8==6.0.0
 isort==5.11.4
@@ -11,7 +14,11 @@ oauthlib==3.2.2
 
 Pillow==9.3.0
 
-psycopg2==2.9.5
+psycopg2-binary==2.9.3
+
+redis==4.3.4
+celery==5.2.7
+django-redis==5.2.0
 
 requests==2.28.1
 requests-oauthlib==1.3.1
